K1J-412: Logging in json-format in alignment with ECS. Performance logging on external SOAP-call (#88)
Co-authored-by: Matias Wurschmidt-Wang <matias.wurschmidt@soprasteria.com>